# ENE-CPA

Listas/Lista 1/L1a/: leia-me.txt  q1_lista1a.cpp  q2_lista1a.cpp  q3_lista1a.cpp
Listas/Lista 2/: L2.m
Trabalho Final/: CPA-Trabalho-Final-state_machine.rar  Parte2.asv  Parte2.m  teste.m
Trabalho Final/Parte 1/: LEIAME.txt
Trabalho Final/Parte 1/inc/: state_machine.h
Trabalho Final/Parte 1/src/: state_machine.c  test_1.c
Trabalho Final/Parte 2/: leiame.txt  petri_net.m
Trabalho Final/Parte 3/: clpfiddler.txt
Trabalho Final/state_machine/: CMakeLists.txt  LEIAME.txt
Trabalho Final/state_machine/inc/: dev_helper.h  state_machine.h
Trabalho Final/state_machine/src/: state_machine.c  test_1.c
